# torustiq-cli

./: CMakeLists.txt  Cargo.toml  README.md
docs/: definitions.md
examples/input_files/: simple_lines_second.txt
examples/pipelines/: dir_to_stdio.yaml  file_to_stdio.yaml  lua_all_stages.yaml  stdio_echo.yaml
examples/scripts/: stage_processor_multiplier.lua
playground/pipelines/: http_to_kafka.yaml  http_to_stdout.yaml
src/: callbacks.rs  cli.rs  config.rs  main.rs  module.rs  module_loader.rs  pipeline.rs  shutdown.rs  xthread.rs
src/commands/run/: globals.cpp  globals.hpp  run.cpp
src/common/: strings.cpp  strings.hpp
src/common/collections/: tsqueue.hpp
src/modules/: event_listener.rs  listener.rs  mod.rs  module_loader.rs  pipeline.rs  step_module.rs
src/pipeline/: event_listener.rs  listener.rs  mod.rs  pipeline.cpp  pipeline.hpp  pipeline.rs  pipeline_step.rs
src/pipeline/stages/: abstract_stage.cpp  abstract_stage.hpp  processor_stage.cpp  processor_stage.hpp  receiver_stage.cpp  receiver_stage.hpp  sender_stage.cpp  sender_stage.hpp  sink_stage.cpp  sink_stage.hpp  source_stage.cpp  source_stage.hpp
src/pipeline/stages/mixins/: receiver_stage.cpp  receiver_stage.hpp  sender_stage.cpp  sender_stage.hpp
src/plugins/: abstract_plugin.cpp  abstract_plugin.hpp  factory.cpp  factory.hpp  stage_plugin.cpp  stage_plugin.hpp
src/plugins/builtin/: factory.cpp
src/plugins/builtin/file/: file.cpp  file.hpp  file_reader.cpp  file_reader.hpp  typedefs.hpp
src/plugins/builtin/lua/: lua.cpp  (+1 more)
src/system/: dll.hpp
src/typedefs/pipeline/: message.h
(+2 files in other folders)
