[package]
name = "torustiq-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
libloading = "0.8.3"
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
torustiq-common = { path = "../torustiq-common" }